6861557: G1: assert(top() == bottom() || zfs == Allocated,"Region must be empty, or ...")

Druing heap shrinking, check for emptiness of a region before modifying its ZF status.

Reviewed-by: tonyp